test/statements/foreach/reduceIntent.good
reduceIntent.chpl:2: error: reduce intents can not be used in foreach loops
