test/statements/foreach/reduceIntent.chpl
var x = 0;
foreach i in 0..10 with (+reduce x) do x += i;
